third_party/rust/chromium_crates_io/vendor/zerocopy-0.7.35/tests/ui-nightly/max-align.stderr
error[E0589]: invalid `repr(align)` attribute: larger than 2^29
  --> tests/ui-nightly/max-align.rs:96:17
   |
96 | #[repr(C, align(1073741824))]
   |                 ^^^^^^^^^^
